tests/snapshots/tui_snapshots__snapshot_not_started_exercise.snap
---
source: tests/tui_snapshots.rs
expression: render_to_string(&mut a)
---
 🧪  Helixir    📦  Module 2/2   📝  Exercise 1/2   [?] help

┌ 📚  Exercises ────────────────────┐┌ Exercise Detail ─────────────────────────────────────────────────────────────────┐
│ ▼ 🗂  Movement (1/2)              ││                                                                                  │
│                                  ││  ⭐  Select 1                                                                     │
│    ✅  Move 1                     ││  Category: Selection   Difficulty: 1/3                                           │
│       Move 2                     ││                                                                                  │
│                                  ││  ⌨️   COMMANDS                                                                    │
│ ▼ 🗂  Selection (1/2)             ││                                                                                  │
│                                  ││     v       select                                                               │
│       Select 1                   ││                                                                                  │
│    ✅  Select 2                   ││  📋  INSTRUCTIONS                                                                 │
│                                  ││                                                                                  │
│                                  ││     Instructions for Select 1                                                    │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││  ───────────────────────────────────────────                                     │
│                                  ││                                                                                  │
│                                  ││  ⬜  Not started — edit the .hxt file to begin                                    │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││  ── end ──                                                                       │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
└──────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘

  🏆  ██████████░░░░░░░░░░ 2/4 (50%)      💡 [space] hint  🔄 [r] reset  ⏭️  [n] next  🚪 [q] quit      👀  Watching...
